trying to fix config error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,19 +2,6 @@ version: '2.1'
 orbs:
   docker: circleci/docker@2.2.0
 
-commands:
-  install-ddev:
-    steps:
-      - run:
-          name: Install DDev
-          command: |
-            set -e
-            sudo rm -rf /etc/apt/sources.list.d/heroku.list
-            sudo apt-get update
-            sudo apt-get install ca-certificates
-            curl https://apt.fury.io/drud/gpg.key | sudo apt-key add -
-            echo "deb https://apt.fury.io/drud/ * *" | sudo tee -a /etc/apt/sources.list.d/ddev.list
-            sudo apt update && sudo apt install -y ddev
 jobs:
   build:
     parallelism: 1
@@ -26,9 +13,8 @@ jobs:
           name: Install packages
           command: npm install
       - run:
-          name: Setup playwright
-          command: npx playwright install
+          name: Setup Playwright
+          command: npx playwright install --with-deps
       - run:
           name: Run Vitest
           command: npm run test
-
